project JDK level updated #SCL-15806